[Layout] 네이버 지도 import 설정

--- a/StreetCat/Info.plist
+++ b/StreetCat/Info.plist
@@ -56,5 +56,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NMFClientId</key>
+	<string>068dhv2w46</string>
 </dict>
 </plist>
