Add RxSwift as a dependency, add network call logic for TMAP pedestrian routing APIs

--- a/StreetCat/Info.plist
+++ b/StreetCat/Info.plist
@@ -58,5 +58,9 @@
 	</array>
 	<key>NMFClientId</key>
 	<string>068dhv2w46</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>사용자의 위치를 받습니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>사용자의 위치를 받습니다.</string>
 </dict>
 </plist>
